--- a/321_Goncharov/Pages/AdminPage.xaml
+++ b/321_Goncharov/Pages/AdminPage.xaml
@@ -5,10 +5,51 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:_321_Goncharov.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Админ">
+      d:DesignHeight="360" d:DesignWidth="800"
+      Title="Администратор">
 
     <Grid>
-        
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="35"/>
+        </Grid.RowDefinitions>
+
+        <DataGrid Grid.Row="0"
+                  Name="dgUser"
+                  AutoGenerateColumns="False"
+                  IsReadOnly="True">
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Логин" Binding="{Binding Login}" Width="100"/>
+                <DataGridTextColumn Header="Пароль" Binding="{Binding Password}" Width="100"/>
+                <DataGridTextColumn Header="Роль" Binding="{Binding Role}" Width="100"/>
+                <DataGridTextColumn Header="Ф.И.О." Binding="{Binding FIO}" Width="160"/>
+                <DataGridTextColumn Header="Фото" Binding="{Binding Photo}" Width="140"/>
+
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Name="btnEdit" Content="Редактировать" Width="160" ></Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button Grid.Row="1"
+                Name="btnAdd"
+                Content="Добавить"
+                ToolTip="Добавить пользователя"
+                HorizontalAlignment="Left"
+                />
+
+        <Button Grid.Row="1"
+                Name="btnDel"
+                Content="Удалить"
+                ToolTip="Удалить пользователя"
+                HorizontalAlignment="Right"
+                />
     </Grid>
+
 </Page>
