--- a/321_Goncharov/Pages/UserPage.xaml
+++ b/321_Goncharov/Pages/UserPage.xaml
@@ -9,6 +9,117 @@
       Title="Пользователь">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+
+        <ListView Name="lvUsersList"
+                  Grid.Row="1"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  HorizontalContentAlignment="Center"
+                  Background="#2F4454"
+                  >
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal"
+                               HorizontalAlignment="Center">
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="360"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Image Width="450"
+                               Grid.Row="1" 
+                               Stretch="UniformToFill" 
+                               HorizontalAlignment="Center">
+                            <Image.Source>
+                                <Binding Path="Photo">
+                                    <Binding.TargetNullValue>
+                                        <ImageSource>/Resources/DefaultPhoto.jpg</ImageSource>
+                                    </Binding.TargetNullValue>
+                                </Binding>
+                            </Image.Source>
+                        </Image>
+                        <TextBlock VerticalAlignment="Center"
+                                   TextAlignment="Center"
+                                   Width="450" 
+                                   Grid.Row="0" 
+                                   TextWrapping="Wrap" 
+                                   Text="{Binding FIO}" 
+                                   HorizontalAlignment="Center" 
+                                   FontSize="18" 
+                                   FontWeight="Bold"
+                                   />
+
+                        <TextBlock VerticalAlignment="Center" 
+                                   TextAlignment="Left" 
+                                   Width="450" 
+                                   Grid.Row="2" 
+                                   HorizontalAlignment="Center" 
+                                   FontSize="18"
+                                   Text="{Binding Role}"
+                                   />
+
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Label Content="ФИО:"
+               Grid.Row="0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               />
+
+        <TextBox Name="tbSearch"
+                 ToolTip="Поиск по фамилии"
+                 HorizontalAlignment="Left"
+                 Margin="60,0,0,0"
+                 VerticalAlignment="Center" TextChanged="tbSearch_TextChanged"
+                 />
+
+        <Label Content="Сортировка ФИО:"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="210,0,0,0"
+               />
+
+        <ComboBox Name="cbSort"
+                  Grid.Column="0"
+                  ToolTip="Порядок сортировки"
+                  HorizontalAlignment="Left"
+                  Margin="370,0,0,0"
+                  VerticalAlignment="Center" SelectionChanged="cbSort_SelectionChanged">
+            <ComboBoxItem Name="cbAscending" Content="По возрастанию"/>
+            <ComboBoxItem Name="cbDescending" Content="По убыванию"/>
+        </ComboBox>
+
+        <CheckBox Name="chkbOnlyUsers"
+                  IsChecked="False"
+                  Content="Пользователь"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Center"
+                  Margin="525,0,0,0" 
+                  Checked="chkbOnlyUsers_Checked"
+                  Unchecked="chkbOnlyUsers_Unchecked"
+                  />
+
+        <Button Name="btnClear"
+                Content="Очистить"
+                Grid.Row="0"
+                ToolTip="Очистить фильтры"
+                HorizontalAlignment="Right"
+                Margin="10"
+                VerticalAlignment="Center" Click="btnClear_Click"/>
     </Grid>
+
 </Page>
